--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,20 +13,22 @@ body {
   background: rgba(0, 0, 0, 0)
 }
 
-.pokeImg {
+.position {
+  margin-top: 12%;
+  margin-left: 5%;
+}
+
+.imgSize {
   width: 60%;
   height: auto;
+}
+
+.pokeImg {
   -webkit-filter: contrast(0) sepia(100%) hue-rotate(163deg) saturate(178%) brightness(100%);
   filter: contrast(0) sepia(100%) hue-rotate(163deg) saturate(178%) brightness(100%);
   opacity: 1;
 
 }
-
-/* .silhouette-img {
-  -webkit-filter: grayscale(100%) brightness(0);
-  filter: grayscale(100%) brightness(0);
-  opacity: 0.6;
-} */
 
 .quiz-box {
   background: #5ea7ce;
